--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
                     <archive>
                         <manifest>
                             <mainClass>
-                                nec.soft.java.main.Main
+                                com.zhangjikai.linkgame.main.Main
                             </mainClass>
                         </manifest>
                     </archive>
